[tool.poetry]
name = "hydrocron"
version = "1.3.0a5"
description = "OpenAPI access to Time Series data for SWOT features"
authors = ["PO.DAAC <podaac@jpl.nasa.gov>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/podaac/hydrocron"
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules"
]
exclude = ['contrib', 'docs', 'tests']
packages = [
    {include = "hydrocron"}
]

[tool.poetry.dependencies]
python = "^3.10"
six = "^1.16.0"
boto3 = "^1.28.2"
pymysql = "^1.1.0"
geopandas = "^0.13.2"
earthaccess = "^0.5.3"
shapely = "^2.0.1"
cryptography = "42.0.0"
python-dotenv = "^1.0.0"
geojson = "^3.1.0"
accept-types = "^0.4.1"
moto = "^5.0.8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-dynamodb = "^2.2.3"
pylint = "^2.15.8"
flake8 = "^6.0.0"
pytest-cov = "^4.1.0"


[tool.poetry.group.docs.dependencies]
jupyter-book = "^0.15.1"
folium = "^0.16.0"
matplotlib = "^3.8.3"


[tool.poetry.group.test.dependencies]
pytz = "^2024.1"

[tool.poetry.scripts]
hydrocron_api = "hydrocron.api.__main__:__main__"
hydrocron_load = 'hydrocron.db.load_data:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
