[tool.poetry]
name = "hydrocron"
version = "1.7.0rc13"
description = "OpenAPI access to Time Series data for SWOT features"
authors = ["PO.DAAC <podaac@jpl.nasa.gov>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/podaac/hydrocron"
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules"
]
exclude = ['contrib', 'docs', 'tests']
packages = [
    {include = "hydrocron"}
]

[tool.poetry.dependencies]
python = "^3.12"
six = "^1.16.0"
boto3 = "^1.28.2"
pymysql = "^1.1.1"
geopandas = "^1.1.2"
earthaccess = "^0.16.0"
shapely = "^2.0.1"
cryptography = "^46.0.0"
python-dotenv = "^1.0.0"
geojson = "^3.1.0"
accept-types = "^0.4.1"
moto = "^5.0.9"
vcrpy = "^8.0.0"
python-cmr = "^0.13.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.0"
pytest-dynamodb = "^2.2.3"
pylint = "^4.0.0"
flake8 = "^7.1.0"
pytest-cov = "^7.0.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
jupyter-book = "^2.1.2"
folium = "^0.16.0"
matplotlib = "^3.8.3"


[tool.poetry.group.test.dependencies]
pytz = "^2026"

[tool.coverage.run]
source = ['hydrocron']
relative_files = true

[tool.poetry.scripts]
hydrocron_api = "hydrocron.api.__main__:__main__"
hydrocron_load = 'hydrocron.db.load_data:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
